[project]
name = "winzy-convert"
version = "0.0.1"
description = "Mimic's convert to convert images to pdf, ppt etc."
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-convert"
Changelog = "https://github.com/sukhbinder/winzy-convert/releases"
Issues = "https://github.com/sukhbinder/winzy-convert/issues"
CI = "https://github.com/sukhbinder/winzy-convert/actions"

[project.entry-points."winzy.plugins"]
topdf = "winzy_convert:topdf_plugin"
toppt = "winzy_convert:toppt_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
